--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
 .box{
     width: 50px;
     height: 50px;
-    background-color: #bada55
+    background-color: #bada55;
+    transition-property: width;
+    transition-duration: 2s;
 }
 
 .box:hover{
     width: 150px;
-    transition-property: width;
-    transition-duration: 2s;
 }
