--- a/main.css
+++ b/main.css
@@ -2,10 +2,11 @@
     width: 50px;
     height: 50px;
     background-color: #bada55;
-    transition-property: width;
+    transition-property: width, background-color;
     transition-duration: 2s;
 }
 
 .box:hover{
     width: 150px;
+    background-color: #e84610;
 }
